# user-microservice-django

./: .env.example  .gitignore  .pdm.toml  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.docker/: entrypoint.sh
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_user_is_staff.py
api/utils/: seed.py
setup/: settings.py  urls.py
src/__shared/application/: use_cases.py
src/__shared/domain/: entities.py  exceptions.py  value_objects.py
src/infrastructure/api/: apps.py
src/infrastructure/api/migrations/: 0001_initial.py  0002_user_is_staff.py
src/infrastructure/setup/: asgi.py  wsgi.py
src/user/domain/: entities.py
src/user/infra/: manage.py
src/user/infra/api/: tests.py  urls.py
